Mudando de bolacha para biscoito nos itens da lista

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li>Leite - <strong>R$ 7,00</strong></li>
         <li>Granola - <strong>R$ 10,50</strong></li>
         <li>Toddy - <strong>R$ 11,90</strong></li>
-        <li>Bolacha Maizena - <strong>R$ 11,00</strong></li>
+        <li>Biscoito Maizena - <strong>R$ 11,00</strong></li>
         <li>Pizza Congelada - <strong>R$ 15,75</strong></li>
         <li>Suco de Uva - <strong>R$ 14,99</strong></li>
         <li>Peito de Frango - <strong>R$ 20,00</strong></li>
